                   ==================================
                   Release Notes for Samba 3.0.23pre1
                               Apr 20, 2006
                   ==================================

This is a preview release of the Samba 3.0.23 code base and
is provided for testing only.  This release is *not* intended
for production servers.  There has been a substantial amount
of development since the 3.0.21 series of stable releases.
We would like to ask the Samba community for help in testing
these changes as we work towards the next significant production
upgrade Samba 3.0 release.

There has been a substantial amount of cleanup work done 
during this development cycle.  Two weeks of development time
was dedicated to fixing bugs reported by the Coverity source 
code scans.  Details can be found at in the following two 
articles:

	http://news.samba.org/#coverity_zero_bugs 
	http://news.samba.org/#zdnet_quick_response

New features introduced in 3.0.23pre1 include:

  o New offline mode in winbindd.
  o New kerberos support for pam_winbind.so.
  o New handling of unmapped users and groups. 
  o New non-root share management tools.
  o Improved support for local and BUILTIN groups.


User and Group changes
======================

The user and group internal management routines have been rewritten
to prevent overlaps of assigned Relative Identifiers (RIDs).  
In the past the has been a potential problem when either manually 
mapping Unix groups with the 'net groupmap' command or when 
migrating a Windows domain to a Samba domain using 'net rpc vampire'.

Unmapped users are now assigned a SID in the S-1-22-1 domain and
unmapped groups are assigned a SID in the S-1-22-2 domain.
Previously they were assign a RID within the SAM on the Samba 
server.  For a DC this would have been under the authority of 
the domain SID where as on a member server or standalone host,
this would have been under the authority of the local SAM 
(hint: net getlocalsid).
