@@ -2,15 +2,21 @@
 
 VERSION=$1
 RELEASE=$2
+REVISION=$3
 
-if [ $# -ne 2 ]; then
-    echo Usage: update-pkginfo VERSION RELEASE
+if [ $# -ne 3 ]; then
+    echo Usage: update-pkginfo VERSION RELEASE REVISION
     exit 1
 fi
+# PREV=`echo ${REVISION} | sed 's/[^0-9]//g'`
+# PREV="."`echo ${REVISION} | sed 's/[0-9]//g'`".${PREV}"
 
 for f in `du -a | awk '{print $2}' | grep \.tmpl$`; do
         f2=`echo $f | sed s/.tmpl//g`
         echo $f2
-        sed -e s/PVERSION/$VERSION/g -e s/PRELEASE/$RELEASE/g < $f > $f2
+        sed -e s/PVERSION/$VERSION/g \
+		-e s/PRELEASE/$RELEASE/g \
+		-e s/PREVISION/${REVISION}/g \
+		-e s/PRPMREV/.${REVISION}/g < $f > $f2
 done
 
